<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button!</string>
    <string name="login">login</string>
    <string name="login_name">login name</string>
    <string name="password">password</string>
    <string name="login_button">Log in</string>
    <string name="dialog_message">Would you like to finish?</string>
    <string name="dialog_title">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="switch_on">Switch ON</string>
    <string name="switch_off">Switch OFF</string>
    <string name="response">Here is my response</string>
    <string name="what_does">What does this do?</string>
    <string name="check_box">Check Box</string>
    <string name="radio_button">Radio Button</string>
    <string name="chat_button">Start Chat</string>
    <string name="send_message_button">Send</string>
    <string name="send_message_hint">Type your message here</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="toolbar_button">Toolbar</string>
    <string name="about">Version 1.0, by Marco Valdez</string>
    <string name="item1_select">You selected item 1</string>
    <string name="toolbar_dialog_option_2">Do you want to go back?</string>
    <string name="set_message_message">New message to display</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="about_word">About</string>
    <string name="weather_button">Weather</string>
    <string name="min_temp">Min Temp: </string>
    <string name="cur_temp">Current Temp: </string>
    <string name="max_temp">Max Temp: </string>
    <string name="message_text">Message text </string>
    <string name="message_id">Message ID </string>
    <string name="message_delete">Delete Message</string>




</resources>
